// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard component should render policy description as expected 1`] = `
<React.Fragment>
  Theses Assessors
   (
  2
  )
</React.Fragment>
`;

exports[`SecurityCard component should render policy description as expected 2`] = `
<React.Fragment>
  test2Name
   (
  test2ID
  )
</React.Fragment>
`;

exports[`SecurityCard component should render policy items as expected 1`] = `
Array [
  <WithStyles(MenuItem)
    value={1}
  >
    Administrators
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={2}
  >
    Theses Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={3}
  >
    Evidence Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={4}
  >
    Staff and Students
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={5}
  >
    Public
  </WithStyles(MenuItem)>,
]
`;

exports[`SecurityCard component should render policy items as expected 2`] = `
Array [
  <WithStyles(MenuItem)
    value={1}
  >
    test1Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={2}
  >
    test2Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    value={3}
  >
    test3Label
  </WithStyles(MenuItem)>,
]
`;

exports[`SecurityCard component should render properly 1`] = `
<StandardCard
  accentHeader={true}
  title={
    <span>
      <b>
        test2
      </b>
       level security - 
    </span>
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        component="p"
        variant="body2"
      >
        test3
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Field
        component={[Function]}
        disabled={false}
        label="test2 policy to apply to this PID"
        name="test1"
        required={true}
        validation={
          Array [
            [Function],
          ]
        }
      >
        <WithStyles(MenuItem)
          disabled={true}
          value=""
        >
          test4
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="0"
          value={1}
        >
          Administrators
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value={2}
        >
          Theses Assessors
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value={3}
        >
          Evidence Assessors
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value={4}
        >
          Staff and Students
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value={5}
        >
          Public
        </WithStyles(MenuItem)>
      </Field>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.05)",
          "marginTop": 24,
          "padding": 24,
        }
      }
      xs={12}
    >
      <WithStyles(Typography)
        style={
          Object {
            "marginTop": -8,
          }
        }
        variant="h6"
      />
      <WithStyles(Grid)
        container={true}
        spacing={8}
        style={
          Object {
            "marginTop": 8,
          }
        }
      >
        <WithStyles(Grid)
          item={true}
          xs={2}
        >
          <b>
            Name (ID):
          </b>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={10}
        >
          Administrators
           (
          1
          )
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardCard>
`;

exports[`SecurityCard component should render properly 2`] = `
<StandardCard
  accentHeader={true}
  title={
    <span>
      <b>
        test2
      </b>
       level security - 
    </span>
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        component="p"
        variant="body2"
      >
        test3
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Field
        component={[Function]}
        disabled={false}
        label="test2 policy to apply to this PID"
        name="test1"
        required={true}
        validation={
          Array [
            [Function],
          ]
        }
      >
        <WithStyles(MenuItem)
          disabled={true}
          value=""
        >
          test4
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="0"
          value={1}
        >
          Administrators
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value={2}
        >
          Theses Assessors
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value={3}
        >
          Evidence Assessors
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value={4}
        >
          Staff and Students
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value={5}
        >
          Public
        </WithStyles(MenuItem)>
      </Field>
    </WithStyles(Grid)>
    0
  </WithStyles(Grid)>
</StandardCard>
`;
